--- a/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
+++ b/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
@@ -56,9 +56,14 @@
     </div>
 
     <div class="fields">
-        <div class="six wide field">
+        <div class="five wide field">
             <label>Birthdate</label>
             {{form.birth_date}}
+        </div>
+
+        <div class="five wide field">
+            <label>Date Procured</label>
+            {{form.date_created}}
         </div>
 
     </div>
