--- a/planningandacquiring/templates/planningandacquiring/budgeting.html
+++ b/planningandacquiring/templates/planningandacquiring/budgeting.html
@@ -25,7 +25,8 @@
   </div>
   <ul class="list">
     <li>Select a quantity and price for each item.</li>
-      <li>If there are no budgeting estimate made in the prior year, the latest estimate before the current year will be shown.</li>
+      <li>If there are no budgeting estimates made in the prior year, the latest estimate before the current year will be shown.</li>
+      <li>If an item is not included in the previous budget, the system will use the inventory price set by the user for the previous budget bid.</li>
     <li>Use the information available on the page to define your budget!</li>
   </ul>
 </div>
@@ -89,6 +90,7 @@
      <a class="item" data-tab="third">Dog Food</a>
      <a class="item" data-tab="fourth">Equipment</a>
      <a class="item" data-tab="fifth">Vet Supply</a>
+     <a class="item" data-tab="sixth">K9</a>
 </div>
 
 <form action="{% url 'planningandacquiring:budgeting' %}" method="POST">
@@ -275,6 +277,7 @@
             <th>Vaccine Type</th>
             <th>Total Vaccines Taken (All Current Dogs)</th>
             <th>Total Vaccines Required (All Current Dogs)</th>
+            <th>Recommended Quantity of Vaccines to Include in Budget</th>
             </thead>
         </tr>
         <tbody>
@@ -282,36 +285,43 @@
             <td>Deworming</td>
             <td>{{deworming}}</td>
             <td>{{deworming_req}}</td>
+            <td>{{vac_needed.0}}</td>
         </tr>
         <tr>
             <td>DHPPIL CV</td>
             <td>{{dhppil_cv}}</td>
             <td>{{dhppil_cv_req}}</td>
+            <td>{{vac_needed.1}}</td>
         </tr>
         <tr>
             <td>Heartworming</td>
              <td>{{heartworming}}</td>
              <td>{{heartworming_req}}</td>
+            <td>{{vac_needed.2}}</td>
         </tr>
         <tr>
             <td>Antirabies</td>
             <td>{{antirabies}}</td>
             <td>{{antirabies_req}}</td>
+            <td>{{vac_needed.3}}</td>
         </tr>
         <tr>
             <td>Bordetella</td>
             <td>{{bordetella}}</td>
             <td>{{bordetella_req}}</td>
+            <td>{{vac_needed.4}}</td>
         </tr>
         <tr>
             <td>DHPPIL4</td>
             <td>{{dhppil4}}</td>
             <td>{{dhppil4_req}}</td>
+            <td>{{vac_needed.5}}</td>
         </tr>
         <tr>
             <td>Tick-Flea</td>
             <td>{{tick_flea}}</td>
             <td>{{tick_flea_req}}</td>
+            <td>{{vac_needed.6}}</td>
         </tr>
         </tbody>
 
@@ -706,6 +716,144 @@
         </table>
     </div>
 
+    <div class="ui tab segment" data-tab="sixth">
+
+         <table id="tabledata6" class="ui seven column celled table">
+          <tr>
+            <thead>
+            <th>Price per K9 (Last Year's Budget Bid)</th>
+            <th>Price per K9 (Current Budget Bid)</th>
+            <th>Estimated Quantity (Current)</th>
+            <th>Estimated Budget (Last Year's Estimate)</th>
+            <th>Spendings (This Year)</th>
+            <th>Estimated Budget (Current)</th>
+            <th>Difference (Current Estimate - Spendings)</th>
+            </thead>
+        </tr>
+             <tbody>
+             <tr>
+                 <td style="text-align:right">₱<output data-k9-id = "0" name = "k9-previous_price" id = "id_k9-previous_price">{{k9_previous_price}}</output></td>
+                 <td>
+                <div class="ui right labeled input">
+                <label class="ui label">₱</label>
+                {% render_field k9_form.price data-k9-id=0%}
+               <div class="ui basic label">.00</div>
+                    </div>
+            </td>
+                 <td>{{k9_form.quantity}}</td>
+                 <td style="text-align:right">₱<output data-k9-id = "0" name = "k9-previous_total" id = "id_k9-previous_total">{{k9_previous_total}}</output></td>
+                 <td style="text-align:right">₱<output class = "spendings_total" data-k9-id = "0" name = "k9-actual" id = "id_k9-actual">{{k9_spendings}}</output></td>
+                 <td><div class="ui right labeled input">
+                <label class="ui label">₱</label>
+                {% render_field k9_form.budget data-k9-id=0 readonly="true" class="subtotal"%}
+               <div class="ui basic label">.00</div>
+                    </div></td>
+                 <td style="text-align:right">₱<output class = "difference_total" name = "k9-difference-total" id = "id_k9-difference-total"></output></td>
+             </tr>
+
+             <tr>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+                 <td style="text-align:right">₱<output name = "grandspendings" class = "grandspendings">{{grandspendings}}</output></td>
+                 <td><strong>Grand total:</strong>
+             <div class="ui right labeled input">
+                <label class="ui label">₱</label>
+           <input class = "grand_total" name = "grand_total" readonly="true">
+                 <div class="ui basic label">.00</div>
+                    </div></td>
+                 <td style="text-align:right">₱<output name = "granddifference" class = "granddifference"></output></td>
+             </tr>
+             </tbody>
+         </table>
+
+          <button id = 'in_heat_btn' class="ui blue button" type = "button">Toggle In-Heat K9 Table</button>
+
+    <div class="ui segment" id = "in_heat_table">
+  <div class="ui two column very relaxed grid">
+    <div class="column">
+        <h2 class="ui center aligned block header">
+            In-Heat K9 Table (for {{upcoming_year}})
+        </h2>
+        <table class = "ui celled table">
+        <tr>
+        <thead>
+        <th>Month</th>
+        <th>No. of K9s in Heat</th>
+        </thead>
+        </tr>
+        <tbody>
+            <tr>
+                <td>January</td>
+                <td>{{sum_in_heat_monthly_array.0}}</td>
+            </tr>
+         <tr>
+                <td>February</td>
+                <td>{{sum_in_heat_monthly_array.1}}</td>
+            </tr>
+        <tr>
+                <td>March</td>
+                <td>{{sum_in_heat_monthly_array.2}}</td>
+            </tr>
+        <tr>
+                <td>April</td>
+                <td>{{sum_in_heat_monthly_array.3}}</td>
+            </tr>
+        <tr>
+                <td>May</td>
+                <td>{{sum_in_heat_monthly_array.4}}</td>
+            </tr>
+        <tr>
+                <td>June</td>
+                <td>{{sum_in_heat_monthly_array.5}}</td>
+            </tr>
+        <tr>
+                <td>July</td>
+                <td>{{sum_in_heat_monthly_array.6}}</td>
+            </tr>
+        <tr>
+                <td>August</td>
+                <td>{{sum_in_heat_monthly_array.7}}</td>
+            </tr>
+        <tr>
+                <td>September</td>
+                <td>{{sum_in_heat_monthly_array.8}}</td>
+            </tr>
+        <tr>
+                <td>October</td>
+                <td>{{sum_in_heat_monthly_array.9}}</td>
+            </tr>
+        <tr>
+                <td>November</td>
+                <td>{{sum_in_heat_monthly_array.10}}</td>
+            </tr>
+        <tr>
+                <td>December</td>
+                <td>{{sum_in_heat_monthly_array.11}}</td>
+            </tr>
+        <tr>
+            <td><b>Total  'In-Heats'  for {{upcoming_year}}:</b> </td>
+            <td>{{sum_in_heat}}</td>
+        </tr>
+
+        </tbody>
+    </table>
+
+    </div>
+    <div class="column">
+
+    </div>
+  </div>
+  <div class="ui vertical divider">
+
+  </div>
+</div>
+
+
+
+    </div>
+
 <div class="ui right aligned segment" style="padding: 0px;" style="border-width: 0px;">
             <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Save Budget Estimate</button>
         </div>
@@ -724,6 +872,7 @@
 		$('#tabledata3')
 		$('#tabledata4')
 		$('#tabledata5')
+		$('#tabledata6')
 		$('.menu .item').tab();
 	});
 
@@ -799,6 +948,12 @@
         $('#vaccination_btn').on("click", function(e){
                $('#vaccination_table').toggle();
          });
+
+         $('#in_heat_table').hide();
+
+        $('#in_heat_btn').on("click", function(e){
+               $('#in_heat_table').toggle();
+         });
      });
 
 
@@ -862,6 +1017,9 @@ $(document).ready(function() {
     $(`#id_vet_supply-${i}-quantity`).keyup(calcTotal);
      $(`#id_vet_supply-${i}-budget`).keyup(calcTotal);
      }
+
+     $(`#id_k9-price`).keyup(calcTotal);
+      $(`#id_k9-quantity`).keyup(calcTotal);
 
 });
 
@@ -1201,6 +1359,26 @@ var totalSum_vet = 0
        $('#id_vet_supply-difference-total').val((totalSum_vet > '0') ? ('+'+ totalSum_vet) : totalSum_vet);
     }
 
+var est_qtyVal_k9 =  parseInt($(`#id_k9-quantity`).val(), 10);
+var priceVal_k9 = parseFloat($(`#id_k9-price`).val(), 10);
+var est_budget_k9 = parseFloat($(`#id_k9-budget`).val(), 10);
+
+var actual_k9 = parseFloat($(`#id_k9-actual`).val(), 10);
+ var difference_total_k9 = parseFloat($(`#id_k9-difference-total`).val(), 10);
+
+ $(`#id_k9-budget`).val((priceVal_k9 * est_qtyVal_k9 ? priceVal_k9 * est_qtyVal_k9 : 0) || 0);
+$(`#id_k9-difference-total`).val(( (priceVal_k9 * est_qtyVal_k9 ) - actual_k9 ? (priceVal_k9 * est_qtyVal_k9) - actual_k9 : 0) || 0);
+
+
+result = (priceVal_k9 * est_qtyVal_k9 ) - actual_k9
+
+  if (result < 0) {
+      $(`#id_k9-difference-total`).css(`color`, `red`);
+    }
+    else {
+      $(`#id_k9-difference-total`).css(`color`, `green`);
+       $(`#id_k9-difference-total`).val((result > '0') ? ('+'+ result) : result);
+    }
 
     var totalSum = 0
         $('.subtotal').each(function(){
@@ -1228,8 +1406,9 @@ var totalSum_spendings = 0
 
 var totalSum_grand = totalSum - totalSum_spendings
 
-    if (totalSum < 0) {
+    if (totalSum_grand < 0) {
       $('.granddifference').css(`color`, `red`);
+      $('.granddifference').val(totalSum_grand);
     }
     else {
       $('.granddifference').css(`color`, `green`);
@@ -1241,9 +1420,6 @@ var totalSum_grand = totalSum - totalSum_spendings
 
 </script>
 
-<style>
-
-</style>
 
 
 {% endblock %}
