--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
@@ -58,6 +58,11 @@
                 <td>{{k9.source}}</td>
                 </tr>
             <tr>
+            <tr>
+              <th>Date Procured</th>
+                <td>{{k9.date_created}}</td>
+                </tr>
+            <tr>
 
     		</thead>
         </table>
