--- a/unitmanagement/templates/unitmanagement/on_leave_details.html
+++ b/unitmanagement/templates/unitmanagement/on_leave_details.html
@@ -31,7 +31,7 @@
 </div>
 <div class="field">
     <label>Reason</label>
-    <textarea rows="4">{{data.description}}</textarea readonly>
+    <textarea rows="4" readonly>{{data.description}}</textarea>
 </div>  
 {% if k9 != None and data.status == 'Pending' %}
 <div class="ui negative message">
