login-register authentication

--- a/profiles/templates/profiles/login.html
+++ b/profiles/templates/profiles/login.html
@@ -32,11 +32,11 @@
                         {% csrf_token %}
                         <div class="field">
                             <label>SERIAL NUMBER</label>
-                            {{form.username}}
+                            <input placeholder="" name='serial_number' type="text">
                         </div>
                         <div class="field">
                             <label>PASSWORD</label>
-                            {{form.password}}
+                            <input placeholder="" name='password' type="password">
                         </div>
                     
                         <div class="center aligned">
