--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -22,6 +22,12 @@
             <a class="item" href="{% url 'profiles:user_list'%}"><i class="folder open icon"></i>Unit Management</a>
             <a class="item" href="{% url 'training:adoption_list'%}"><i class="handshake icon"></i>Adoption</a>
             
+            {% elif request.session.session_user_position == "Commander" %}
+            <a class="item" href="{% url 'profiles:commander_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            <a class="item" href="{% url 'deployment:assigned_location_list'%}"><i class="road icon"></i>Deployment</a>
+            <a class="item" href="{% url 'profiles:user_list'%}"><i class="folder open icon"></i>Unit Management</a>
+            
             {% elif request.session.session_user_position == "Handler"%}
             <a class="item" href="{% url 'profiles:handler_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
