training and add breed AGAIN

--- a/planningandacquiring/templates/planningandacquiring/add_breed.html
+++ b/planningandacquiring/templates/planningandacquiring/add_breed.html
@@ -23,6 +23,15 @@
                 <label>Life Span (Years)</label>
                 {{form.life_span}}
             </div>
+            <div class="field">
+                <label>Litter Number</label>
+                {{form.litter_number}}
+            </div>
+            <div class="field">
+                <label>Value</label>
+                {{form.value}}
+            </div>
+
         </div>
 
         <div class="fields">
