--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -21,6 +21,9 @@
                         <a href="{% url 'planningandacquiring:K9_list'%}" class="item">
                                 <i class="list alternate icon"></i>K9 List
                         </a>
+                                <a href="{% url 'planningandacquiring:breed_list'%}" class="item">Breed List
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
 
                         <!-- <a href="{% url 'planningandacquiring:breeding_recommendation'%}" class="item">Breeding Recommendation
                                 <i class="venus mars icon"></i>
@@ -39,6 +42,9 @@
                         <a href="{% url 'planningandacquiring:add_breed_form'%}" class="item">
                                 <i class="plus circle icon"></i>Add Breed
                         </a>
+                                <a href="{% url 'planningandacquiring:breed_list'%}" class="item">Breed List
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
                         <a href="{% url 'planningandacquiring:add_procured_k9'%}" class="item">
                                 <i class="plus circle icon"></i>Add Procured K9
                         </a>
