--- a/training/templates/training/training_update_edd.html
+++ b/training/templates/training/training_update_edd.html
@@ -10,6 +10,7 @@
     {% endif %}
 </div>
 
+
 <table class="ui very basic four column table">
     <thead>
         <tr>
@@ -26,6 +27,7 @@
     <table id="tabledata1" class="ui celled table">
         <thead>
             <!--Stage 1-->
+            {% if data.training_level == 'Stage 0' %}
             <tr>
                 <th>Stage 1.1: Basic Handling</th>
                 <td><b>Topic:</b>
@@ -38,6 +40,7 @@
                 </td>
                 <td class="ui center aligned">{{form.stage1_1}}</td>
             </tr>
+            {% elif data.training_level == "Stage 1.1" %}
             <tr>
                 <th>Stage 1.2: Drive Development</th>
                 <td><b>Topic:</b>
@@ -49,6 +52,7 @@
                 </td>
                 <td class="ui center aligned">{{form.stage1_2}}</td>
             </tr>
+            {% elif data.training_level == "Stage 1.2" %}
             <tr>
                 <th>Stage 1.3: Introduction to Search</th>
                 <td><b>Topic:</b>
@@ -62,6 +66,7 @@
                 </td>
                 <td class="ui center aligned">{{form.stage1_3}}</td>
             </tr>
+            {% elif data.training_level == "Stage 1.3" %}
             <!--Stage 2-->
             <tr>
                 <th>Stage 2.1: Indication / Printing Introduction</th>
@@ -73,6 +78,7 @@
                 </td>
                 <td class="ui center aligned">{{form.stage2_1}}</td>
             </tr>
+            {% elif data.training_level == "Stage 2.1" %}
             <tr>
                 <th>Stage 2.2: Scent Discrimination / Distraction</th>
                 <td><b>Topic:</b>
@@ -83,6 +89,7 @@
                 </td>
                 <td class="ui center aligned">{{form.stage2_2}}</td>
             </tr>
+            {% elif data.training_level == "Stage 2.2" %}
             <tr>
                 <th>Stage 2.3: Volume Odor Discrimination / Safety Measure</th>
                 <td><b>Topic:</b>
@@ -97,6 +104,7 @@
                 <td class="ui center aligned">{{form.stage2_3}}</td>
             </tr>
              <!--Stage 3-->
+            {% elif data.training_level == "Stage 2.3" %}
             <tr>
                 <th>Stage 3.1: Field Search Introduction</th>
                 <td><b>Topic:</b>
@@ -107,16 +115,19 @@
                 </td>
                 <td class="ui center aligned">{{form.stage3_1}}</td>
             </tr>
+            {% elif data.training_level == "Stage 3.1" %}
             <tr>
                 <th>Stage 3.2: Field Proofing</th>
                 <td></td>
                 <td class="ui center aligned">{{form.stage3_2}}</td>
             </tr>
+            {% elif data.training_level == "Stage 3.2" %}
             <tr>
                 <th>Stage 3.3: On-The-Job Training/Field</th>
                 <td></td>
                 <td class="ui center aligned">{{form.stage3_3}}</td>
             </tr>
+            {% endif %}
         </thead>
     </table>
     <div class="fields">
@@ -125,7 +136,11 @@
                 <div class="ui teal label" style="width:80px;">
                     Grade
                 </div>
-                {{form.grade}}
+                {% if data.grade == "0" %}
+                    No Grade Yet
+                {% else %}
+                    {{training.grade}}
+                {% endif %}
             </div>
         </div>
         <div class="field"></div>
@@ -149,13 +164,14 @@
 <script type="text/javascript">
 
  $(document).ready(function() {
-        $('#tabledata1').DataTable();
-        $('#tabledata2').DataTable();
+        $('#tabledata1');
+        $('#tabledata2');
         $('.menu .item').tab();
     });
 
     $(document).ready(function() {
         $('#tabledata').DataTable();
+        $("select[name='grade']").prop('disabled', true)
 
         if($("input[name='stage1_1']").is(':checked')){
             $("input[name='stage1_1']").prop('disabled', true)
@@ -188,8 +204,6 @@
             $("select[name='grade']").prop('disabled', true)
         }
 
-
-        $("select[name='grade']").prop('disabled', true)
 
         //Stage3_3
         $("input[name='stage3_3']").change(function() {
