--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -19,7 +19,7 @@
                             <form class = "ui inverted form" method="POST">
                                 {% csrf_token %}
                                 <div class = "three fields">
-                                    <div class="Seven wide field">
+                                    <div class="seven wide field">
                                         <label>Medicine</label>
                                         {{form.medicine}}
                                     </div>
