--- a/inventory/templates/inventory/medicine_inventory_list.html
+++ b/inventory/templates/inventory/medicine_inventory_list.html
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>Medicine</th>
-            <th>Dose</th>
+            <th>Dose/Uom</th>
             <th>Quantity</th>
             <th></th>
         </tr>
