--- a/planningandacquiring/templates/planningandacquiring/breeding_reco_data.html
+++ b/planningandacquiring/templates/planningandacquiring/breeding_reco_data.html
@@ -1,5 +1,8 @@
 {% load static %}
 {% block content %}
+<center>
+    <h4 class='ui horizontal divider header'>Sire (Father)</h4>
+  </center>
 <table id="tabledata2" class="ui eight column inverted blue celled small table">
     <thead>
         <tr>
