--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -189,6 +189,13 @@
         {% endfor %}
         {% endif %}
     </div>
+
+    <div class="ui modal event_modal">
+      <i class="close icon"></i>
+      <div class="header">Header</div>
+      <div class="scrolling content">Something</div>
+       
+    </div>
 <style>
 
   #calendar .fc-dayGridMonth-view .fc-scroller {
@@ -316,7 +323,15 @@ $(document).ready(function() {
                 {% endfor %}
             ],
 
+          eventClick : function(event, element){
+            $('.content').text(event.title);
+            $('.event_modal').modal('show');
+            
+          },
+
           }); // end #calendar
+          
+          
 
         $('#prev').click(function() {
         $('#calendar').fullCalendar('prevYear');
