--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -55,7 +55,17 @@
                                 <a href="{% url 'planningandacquiring:budget_list'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Budgeting
                         </a>
+                        </a>
 
+                                <a href="{% url 'planningandacquiring:accomplishment_date'%}" class="item">
+                                <i class="money bill alternate outline icon"></i>Accomplishment Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
+                                <i class="money bill alternate outline icon"></i>Veterinarian Report
+                        </a>
+                                <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
+                                <i class="money bill alternate outline icon"></i>Inventory Report
+                        </a>
                         {% endif %}
 
 
