--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -24,6 +24,10 @@
     <link rel="stylesheet" href="{% static 'Semantic-UI/semantic.min.css' %}">
     <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}">
     <link rel="stylesheet" href="{% static 'Chart.js-2.8.0/dist/Chart.min.css' %}">
+
+    <link href="{% static 'fullcalendar-4.1.0/packages/core/main.css' %}" rel='stylesheet' />
+    <link href="{% static 'fullcalendar-4.1.0/packages/daygrid/main.css' %}" rel='stylesheet' />
+    <link href="{% static 'fullcalendar-4.1.0/packages/timegrid/main.css' %}" rel='stylesheet' />
  
 </head>
 <body class="Site">
