--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -8,7 +8,7 @@
 {% fullcalendar_javascript %}
 
 <div class="container fluid">
-  <h1>dashboard</h1>
+  <h1>Dashboard</h1>
   <div class="ui two column grid">
     <div class="column">
 
@@ -46,6 +46,7 @@
     margin: 40px auto;
  }
 </style>
+
 <script>
   $(document).ready(function() {
     $('#calendar').fullCalendar({
@@ -79,7 +80,7 @@
                 {% endfor %}
             ],
 
-          }); // end #calendar
+          });
 
 
 
@@ -91,7 +92,7 @@
       $('#calendar').fullCalendar('nextYear');
       });
     
-  }); // end #document
+  });
 </script>
 
 {% endblock%}
