Fixed initial errors during pull.  Calendar render issue due to datetime. Fixed db_populate.py data issue

--- a/deployment/templates/deployment/request_form.html
+++ b/deployment/templates/deployment/request_form.html
@@ -26,6 +26,11 @@
                 {{form.requester}}
             </div>
 
+            <div class="field">
+                <label>Event Name</label>
+                {{form.event_name}}
+            </div>
+
         </div>
 
         <div class="fields">
